--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/emscripten": "^1.39.10",
     "@types/exceljs": "^1.3.0",
     "@types/papaparse": "^5.3.14",
     "@webgpu/types": "^0.1.40",
@@ -11,7 +12,6 @@
     "exceljs": "^4.4.0",
     "fast-xml-parser": "^4.3.2",
     "genbank-parser": "^1.2.4",
-    "mathjs": "^12.2.1",
     "papaparse": "^5.4.1"
   },
   "scripts": {
