--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/exceljs": "^1.3.0",
     "@types/papaparse": "^5.3.14",
     "@webgpu/types": "^0.1.40",
+    "chart.js": "^4.4.1",
     "esbuild": "^0.19.10",
     "exceljs": "^4.4.0",
     "fast-xml-parser": "^4.3.2",
